# chess_esp32_c6_devkit

./: .gitignore  CMakeLists.txt  CMakeLists_8txt.html  CONTRIBUTING.md  Doxyfile  README.md  README_8md.html  animation__task_8c.html  animation__task_8c__incl.map  animation__task_8c__incl.md5  animation__task_8c_source.html  animation__task_8h.html  animation__task_8h__incl.map  animation__task_8h__incl.md5  animation__task_8h_source.html  annotated.html  annotated_dup.js  app_update.html  ble__nimble__impl_8c.html  ble__nimble__impl_8c.js  ble__nimble__impl_8c__incl.map  ble__nimble__impl_8c__incl.md5  ble__nimble__impl_8c_source.html  ble__task_8c.html  ble__task_8c.js  ble__task_8c__incl.map  ble__task_8c__incl.md5  ble__task_8c_source.html  ble__task_8h.html  ble__task_8h.js  ble__task_8h__incl.map  ble__task_8h__incl.md5  ble__task_8h_source.html  board__api__auth_8c.html  board__api__auth_8c.js  board__api__auth_8c__incl.map  board__api__auth_8c__incl.md5  board__api__auth_8c_source.html  board__api__auth_8h.html  board__api__auth_8h.js  (+1123 more)
CZECHMATE/: Podfile  WidgetExtension-Info.plist
animation_task/: animation_task.c
button_task/: button_task.c
components/ble_task/: CMakeLists.txt  ble_nimble_impl.c  ble_task.c
components/ble_task/include/: ble_task.h
components/game_task/: CMakeLists.txt  chess_gameplay_policy.c  demo_mode_helpers.c  game_board_core.c  game_castling.c  game_cmd_handlers.c  game_dispatch.c  game_endgame_detect.c  game_endgame_report.c  game_error_recovery.c  game_init.c  game_json_export.c  game_led_direct.c  game_matrix_guard.c  game_matrix_workflow.c  game_move_exec.c  game_move_gen.c  game_move_validate.c  game_opening_trainer.c  game_physical.c  game_promotion.c  game_puzzle.c  game_resignation.c  game_snapshot.c  game_task.c  game_timer.c
components/game_task/include/: chess_gameplay_policy.h  game_board_core.h  game_colors.h  game_led_direct.h  game_matrix_guard.h  game_move_exec.h  game_move_validate.h  game_physical.h  game_snapshot.h  game_task.h  game_task_internal.h
components/ha_light_task/: CMakeLists.txt  ha_light_task.c
components/ha_light_task/include/: ha_light_task.h
components/web_server_task/: CMakeLists.txt  README.md  board_api_auth.c  chess_app.js  chess_app_js_new.c  chess_piece_http.c  embed_chess_js.py  js_to_c.py  ota_update.c  update_js_in_c.py  web_handlers_game.c  web_handlers_system.c  web_handlers_wifi.c  web_opening_dispatch.c  web_routes.c  web_server_task.c  web_ws.c
components/web_server_task/include/: board_api_auth.h  chess_piece_http.h  ota_update.h  web_routes.h  web_server_internal.h  web_server_task.h
components/web_server_task/tools/: concat_web_js.py  embed_chess_js.py  js_to_c.py  mqtt_panel_snippet.txt  process_piece_pngs.py  update_js_in_c.py
components/web_server_task/web/: chess_app.js
components/web_server_task/web/data/: openings_catalog.json
components/web_server_task/web/js/: api.js  app_main.js  matrix_guard.js  opening_catalog.js  opening_trainer.js  prefs.js
config_manager/: CMakeLists.txt  config_manager.c
context/: BLE_MOBILE_DATA_STOCKFISH_PLAN.md  CZECHMATE_AI_COACH_FULL_CONTEXT.md  CZECHMATE_APP_MASTER_IMPLEMENTATION_PLAN.md  CZECHMATE_DEPLOY_READINESS.md  CZECHMATE_UI_REMEDIATION_PLAN.md  ENDGAME_REPORT_IMPROVEMENT_PLAN.md  GUIDED_CAPTURE_LED_AND_BOOT_ANIMATION_PLAN.md  LIVE_ACTIVITY_UI_IMPROVEMENT_PLAN.md  WATCH_APP_CODE_ANALYSIS.md  WATCH_BLE_DEEP_ANALYSIS_AND_PLAN.md  analyza_web_lamp_mode.md  nvs_map.txt  nvs_ui_prefs_schema.txt  verify_puzzle_fens.py
data/: openings_catalog.schema.json  openings_master.json  openings_rationale.json  openings_rationale.schema.json
docs/: .gitignore  GITHUB_BRANCHES_EXPLAINED.md  GITHUB_PAGES_ANALYSIS.md  GITHUB_PAGES_QUICK_SETUP.md  GITHUB_PAGES_SETUP.md  GITHUB_REPO_ANALYSIS.md  GITHUB_REPO_FINAL_STATUS.md  GITHUB_REPO_FIX.md  GITHUB_REPO_RESTORE.md  GITHUB_REPO_SETUP.md  HOW_TO_SHARE_DOCUMENTATION.md  README.md  SIMPLE_BRANCH_GUIDE.md  SINGLE_BRANCH_SOLUTION.md  STABILITY_ANALYSIS.md  STABILITY_RISK_ANALYSIS.md  animation__task_8c__incl.map  animation__task_8h.js  button__task_8h__incl.map  chess__app__js__fixed_8c.js  coordinates_system.md  dir_000018_000005.html  dir_000022_000006.html  dir_000023_000005.html  dir_000031_000005.html  dir_000036_000023.html  dir_1991cc6dea0a63cfb4490c20aac875c0.html  dir_27a0c766b97c45b6deeaa7a8c2e2ed8a.js  dir_2c8c9ab3b152afb528f35b2c32a919e8.js  dir_32a2a3e5d7c14df46caeb99f197cead9_dep.map  dir_33cc7e91f7e0627bade559bf776868f5.html  dir_37ff961cb22580004e48f495a430ad7c.js  dir_409f97388efe006bc3438b95e9edef48_dep.md5  dir_47913373ed45407138817b1e7d644a5d_dep.map  dir_5c6c08d104c204cc3ac851f4559ad479_dep.md5  dir_653091839c39176b18308733fb321b48.js  dir_7acbcb872a2ebcf5753943ec89f39513_dep.map  dir_862d50d9bf3f5ceb46867d0cb4c38d54_dep.md5  dir_d0954016f3b51aa8e12d79ad9b090aaa_dep.md5  dir_e77e2685ff47a55cd9b2c8ffde70c90d.html  (+43 more)
embedded/: README_STM32_FW.txt
enhanced_castling_system/: CMakeLists.txt  enhanced_castling_system.c
enhanced_puzzle_system/: CMakeLists.txt  enhanced_puzzle_system.c
firmware/: version.json
flutter_czechmate/: .gitignore  README.md  l10n.yaml  pubspec.yaml  run_dev.sh
freertos_chess/: CMakeLists.txt  freertos_chess.c  led_mapping.c  shared_buffer_pool.c  streaming_output.c
game_led_animations/: CMakeLists.txt  game_led_animations.c
game_task/: CMakeLists.txt  game_led_direct.c  game_task.c  game_task.c.bak  game_task_backup.c
gh-pages-ready/: CMakeLists_8txt.html  README.md  README_8md.html  animation__task_8c.html  animation__task_8c_source.html  animation__task_8h.html  animation__task_8h__incl.map  animation__task_8h__incl.md5  animation__task_8h_source.html  annotated.html  annotated_dup.js  app_update.html  app_update.json  button__task_8c.html  button__task_8c__incl.map  button__task_8c__incl.md5  button__task_8c_source.html  button__task_8h.js  button__task_8h__incl.md5  button__task_8h_source.html  chess__app__js__fixed_8c_source.html  chess__app__js__new_8c.html  (+398 more)
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
(+4022 files in other folders)
