# components/web_server_task/CMakeLists.txt
idf_component_register(
    SRCS "ota_update.c" "web_server_task.c"
          "chess_piece_http.c"
    INCLUDE_DIRS "include"
    EMBED_FILES
        "piece_assets/PieceWhiteKing.png"
        "piece_assets/PieceWhiteQueen.png"
        "piece_assets/PieceWhiteRook.png"
        "piece_assets/PieceWhiteBishop.png"
        "piece_assets/PieceWhiteKnight.png"
        "piece_assets/PieceWhitePawn.png"
        "piece_assets/PieceBlackKing.png"
        "piece_assets/PieceBlackQueen.png"
        "piece_assets/PieceBlackRook.png"
        "piece_assets/PieceBlackBishop.png"
        "piece_assets/PieceBlackKnight.png"
        "piece_assets/PieceBlackPawn.png"
    REQUIRES 
        freertos_chess 
        driver 
        esp_system 
        esp_timer 
        nvs_flash
        esp_wifi
        esp_netif
        esp_http_server
        esp_event
        json
        timer_system
        config_manager
        game_task
        game_hooks
        ble_task
        mdns
        esp_https_ota
        app_update
        esp_partition
        esp_http_client
        mbedtls
)
